--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
   font-family: "Open Sans", sans-serif ;
 }
 
+
 .fas {
   font-family: "Font Awesome 6 Free";
   font-weight: 900;
@@ -81,7 +82,11 @@ body {
   background: #f4f4f4;
   overflow-y: auto;
 }
-
+#page-wrapper {
+  display: flex;
+  flex-direction: column;
+  height: calc(100vh - 60px); /* leave room for the footer */
+}
 #main {
   display: flex;
   height: calc(100vh - 50px);
